// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`feedback email template snapshots > case-partial — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light" />
  <title>Quality Feedback – Snapshot — case-partial</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback – Snapshot — case-partial · Overall 73.3%</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:22px 24px 8px;border-bottom:1px solid #e5e7eb;">
          <div style="font:800 22px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:.04em;">QualiPulse</div>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 4px;">
          <div style="font:600 16px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Hello Aisha,</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">
            A quality evaluation has been completed for your recent Case interaction.
          </div>
        </td></tr>

        <tr><td class="px" style="padding:16px 24px 4px;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
            <tr><td align="center" style="padding:18px 16px;">
              <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
              <div style="margin-top:8px;font:800 34px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#a16207;">73.3%</div>
            </td></tr>
          </table>
        </td></tr>

        
      <tr><td style="padding:8px 24px 4px;">
        <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Quality Evaluation</div>
        <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Greeting and Introduction
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">90.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Communication Clarity
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">60.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Product or Process Knowledge
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Issue Resolution
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">45.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Empathy and Professionalism
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#1d4ed8;white-space:nowrap;">88.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Accuracy and Compliance
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Closing and Next Steps
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">30.0%</td>
        </tr></table>
      </td></tr>

        
        
    <tr><td style="padding:8px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Strengths</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Perfect product knowledge and compliance.</div>
    </td></tr>
        
        
    <tr><td style="padding:8px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Recommended Actions</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Add a clearer closing summary and next-steps line.</div>
    </td></tr>
        

        <tr><td class="px" align="center" style="padding:18px 24px 6px;">
          <a href="https://example.test/api/public/track/click/snapshot-case-partial?to=%2Fportal%2Fsnapshot-case-partial" style="display:inline-block;padding:12px 22px;background:#4f46e5;color:#ffffff;text-decoration:none;border-radius:10px;font:700 14px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;">Open in QualiPulse</a>
        </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;">
          <div style="font:14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Regards,</div>
          <div style="margin-top:2px;font:700 14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">QualiPulse Team</div>
          <div style="margin-top:2px;font:13px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        This is an automated message from QualiPulse. Please do not reply directly.
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-case-partial" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > case-partial — plain-text output is stable 1`] = `
"QualiPulse
Quality Feedback – Snapshot — case-partial

Hello Aisha,

A quality evaluation has been completed for your recent Case interaction.

Overall Quality Score: 73.3%

Quality Evaluation
  [x] Greeting and Introduction — 90.0%
  [x] Communication Clarity — 60.0%
  [x] Product or Process Knowledge — 100.0%
  [x] Issue Resolution — 45.0%
  [x] Empathy and Professionalism — 88.0%
  [x] Accuracy and Compliance — 100.0%
  [x] Closing and Next Steps — 30.0%

Strengths
Perfect product knowledge and compliance.

Recommended Actions
Add a clearer closing summary and next-steps line.

Open in QualiPulse: https://example.test/portal/snapshot-case-partial

Regards,
QualiPulse Team
Quality Feedback and Performance Management"
`;

exports[`feedback email template snapshots > case-partial — subject line is stable 1`] = `"Quality Feedback – Snapshot — case-partial"`;

exports[`feedback email template snapshots > case-perfect — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light" />
  <title>Quality Feedback – Snapshot — case-perfect</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback – Snapshot — case-perfect · Overall 100.0%</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:22px 24px 8px;border-bottom:1px solid #e5e7eb;">
          <div style="font:800 22px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:.04em;">QualiPulse</div>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 4px;">
          <div style="font:600 16px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Hello Aisha,</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">
            A quality evaluation has been completed for your recent Case interaction.
          </div>
        </td></tr>

        <tr><td class="px" style="padding:16px 24px 4px;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
            <tr><td align="center" style="padding:18px 16px;">
              <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
              <div style="margin-top:8px;font:800 34px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;">100.0%</div>
            </td></tr>
          </table>
        </td></tr>

        
      <tr><td style="padding:8px 24px 4px;">
        <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Quality Evaluation</div>
        <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Greeting and Introduction
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Communication Clarity
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Product or Process Knowledge
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Issue Resolution
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Empathy and Professionalism
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Accuracy and Compliance
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Closing and Next Steps
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr></table>
      </td></tr>

        
        
        
        
        

        <tr><td class="px" align="center" style="padding:18px 24px 6px;">
          <a href="https://example.test/api/public/track/click/snapshot-case-perfect?to=%2Fportal%2Fsnapshot-case-perfect" style="display:inline-block;padding:12px 22px;background:#4f46e5;color:#ffffff;text-decoration:none;border-radius:10px;font:700 14px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;">Open in QualiPulse</a>
        </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;">
          <div style="font:14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Regards,</div>
          <div style="margin-top:2px;font:700 14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">QualiPulse Team</div>
          <div style="margin-top:2px;font:13px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        This is an automated message from QualiPulse. Please do not reply directly.
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-case-perfect" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > case-perfect — plain-text output is stable 1`] = `
"QualiPulse
Quality Feedback – Snapshot — case-perfect

Hello Aisha,

A quality evaluation has been completed for your recent Case interaction.

Overall Quality Score: 100.0%

Quality Evaluation
  [x] Greeting and Introduction — 100.0%
  [x] Communication Clarity — 100.0%
  [x] Product or Process Knowledge — 100.0%
  [x] Issue Resolution — 100.0%
  [x] Empathy and Professionalism — 100.0%
  [x] Accuracy and Compliance — 100.0%
  [x] Closing and Next Steps — 100.0%

Open in QualiPulse: https://example.test/portal/snapshot-case-perfect

Regards,
QualiPulse Team
Quality Feedback and Performance Management"
`;

exports[`feedback email template snapshots > case-perfect — subject line is stable 1`] = `"Quality Feedback – Snapshot — case-perfect"`;

exports[`feedback email template snapshots > case-zero — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light" />
  <title>Quality Feedback – Snapshot — case-zero</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback – Snapshot — case-zero · Overall 0.0%</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:22px 24px 8px;border-bottom:1px solid #e5e7eb;">
          <div style="font:800 22px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:.04em;">QualiPulse</div>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 4px;">
          <div style="font:600 16px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Hello Aisha,</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">
            A quality evaluation has been completed for your recent Case interaction.
          </div>
        </td></tr>

        <tr><td class="px" style="padding:16px 24px 4px;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
            <tr><td align="center" style="padding:18px 16px;">
              <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
              <div style="margin-top:8px;font:800 34px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;">0.0%</div>
            </td></tr>
          </table>
        </td></tr>

        
      <tr><td style="padding:8px 24px 4px;">
        <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Quality Evaluation</div>
        <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Greeting and Introduction
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Communication Clarity
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Product or Process Knowledge
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Issue Resolution
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Empathy and Professionalism
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Accuracy and Compliance
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Closing and Next Steps
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr></table>
      </td></tr>

        
        
        
        
        

        <tr><td class="px" align="center" style="padding:18px 24px 6px;">
          <a href="https://example.test/api/public/track/click/snapshot-case-zero?to=%2Fportal%2Fsnapshot-case-zero" style="display:inline-block;padding:12px 22px;background:#4f46e5;color:#ffffff;text-decoration:none;border-radius:10px;font:700 14px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;">Open in QualiPulse</a>
        </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;">
          <div style="font:14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Regards,</div>
          <div style="margin-top:2px;font:700 14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">QualiPulse Team</div>
          <div style="margin-top:2px;font:13px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        This is an automated message from QualiPulse. Please do not reply directly.
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-case-zero" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > case-zero — plain-text output is stable 1`] = `
"QualiPulse
Quality Feedback – Snapshot — case-zero

Hello Aisha,

A quality evaluation has been completed for your recent Case interaction.

Overall Quality Score: 0.0%

Quality Evaluation
  [x] Greeting and Introduction — 0.0%
  [x] Communication Clarity — 0.0%
  [x] Product or Process Knowledge — 0.0%
  [x] Issue Resolution — 0.0%
  [x] Empathy and Professionalism — 0.0%
  [x] Accuracy and Compliance — 0.0%
  [x] Closing and Next Steps — 0.0%

Open in QualiPulse: https://example.test/portal/snapshot-case-zero

Regards,
QualiPulse Team
Quality Feedback and Performance Management"
`;

exports[`feedback email template snapshots > case-zero — subject line is stable 1`] = `"Quality Feedback – Snapshot — case-zero"`;

exports[`feedback email template snapshots > chat-decimal — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light" />
  <title>Quality Feedback – Snapshot — chat-decimal</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback – Snapshot — chat-decimal · Overall 81.0%</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:22px 24px 8px;border-bottom:1px solid #e5e7eb;">
          <div style="font:800 22px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:.04em;">QualiPulse</div>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 4px;">
          <div style="font:600 16px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Hello Aisha,</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">
            A quality evaluation has been completed for your recent Chat interaction.
          </div>
        </td></tr>

        <tr><td class="px" style="padding:16px 24px 4px;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
            <tr><td align="center" style="padding:18px 16px;">
              <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
              <div style="margin-top:8px;font:800 34px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#1d4ed8;">81.0%</div>
            </td></tr>
          </table>
        </td></tr>

        
      <tr><td style="padding:8px 24px 4px;">
        <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Quality Evaluation</div>
        <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Greeting and Introduction
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#1d4ed8;white-space:nowrap;">85.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Communication Clarity
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">90.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Product or Process Knowledge
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#a16207;white-space:nowrap;">72.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Issue Resolution
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">68.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Empathy and Professionalism
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">95.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Accuracy and Compliance
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#1d4ed8;white-space:nowrap;">80.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Closing and Next Steps
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#a16207;white-space:nowrap;">77.0%</td>
        </tr></table>
      </td></tr>

        
    <tr><td style="padding:8px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Summary</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Solid chat with a couple of gaps.</div>
    </td></tr>
        
    <tr><td style="padding:8px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Strengths</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Warm greeting, empathetic tone.</div>
    </td></tr>
        
    <tr><td style="padding:8px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Areas to Improve</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Slow on issue resolution; missed compliance disclosure.</div>
    </td></tr>
        
    <tr><td style="padding:8px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Recommended Actions</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Review KB article #4521 and shadow a senior agent this week.</div>
    </td></tr>
        

        <tr><td class="px" align="center" style="padding:18px 24px 6px;">
          <a href="https://example.test/api/public/track/click/snapshot-chat-decimal?to=%2Fportal%2Fsnapshot-chat-decimal" style="display:inline-block;padding:12px 22px;background:#4f46e5;color:#ffffff;text-decoration:none;border-radius:10px;font:700 14px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;">Open in QualiPulse</a>
        </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;">
          <div style="font:14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Regards,</div>
          <div style="margin-top:2px;font:700 14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">QualiPulse Team</div>
          <div style="margin-top:2px;font:13px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        This is an automated message from QualiPulse. Please do not reply directly.
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-chat-decimal" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > chat-decimal — plain-text output is stable 1`] = `
"QualiPulse
Quality Feedback – Snapshot — chat-decimal

Hello Aisha,

A quality evaluation has been completed for your recent Chat interaction.

Overall Quality Score: 81.0%

Quality Evaluation
  [x] Greeting and Introduction — 85.0%
  [x] Communication Clarity — 90.0%
  [x] Product or Process Knowledge — 72.0%
  [x] Issue Resolution — 68.0%
  [x] Empathy and Professionalism — 95.0%
  [x] Accuracy and Compliance — 80.0%
  [x] Closing and Next Steps — 77.0%

Summary
Solid chat with a couple of gaps.

Strengths
Warm greeting, empathetic tone.

Areas to Improve
Slow on issue resolution; missed compliance disclosure.

Recommended Actions
Review KB article #4521 and shadow a senior agent this week.

Open in QualiPulse: https://example.test/portal/snapshot-chat-decimal

Regards,
QualiPulse Team
Quality Feedback and Performance Management"
`;

exports[`feedback email template snapshots > chat-decimal — subject line is stable 1`] = `"Quality Feedback – Snapshot — chat-decimal"`;

exports[`feedback email template snapshots > chat-perfect — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light" />
  <title>Quality Feedback – Snapshot — chat-perfect</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback – Snapshot — chat-perfect · Overall 100.0%</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:22px 24px 8px;border-bottom:1px solid #e5e7eb;">
          <div style="font:800 22px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:.04em;">QualiPulse</div>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 4px;">
          <div style="font:600 16px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Hello Aisha,</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">
            A quality evaluation has been completed for your recent Chat interaction.
          </div>
        </td></tr>

        <tr><td class="px" style="padding:16px 24px 4px;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
            <tr><td align="center" style="padding:18px 16px;">
              <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
              <div style="margin-top:8px;font:800 34px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;">100.0%</div>
            </td></tr>
          </table>
        </td></tr>

        
      <tr><td style="padding:8px 24px 4px;">
        <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Quality Evaluation</div>
        <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Greeting and Introduction
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Communication Clarity
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Product or Process Knowledge
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Issue Resolution
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Empathy and Professionalism
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Accuracy and Compliance
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Closing and Next Steps
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;white-space:nowrap;">100.0%</td>
        </tr></table>
      </td></tr>

        
        
    <tr><td style="padding:8px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Strengths</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Excellent on every parameter.</div>
    </td></tr>
        
        
        

        <tr><td class="px" align="center" style="padding:18px 24px 6px;">
          <a href="https://example.test/api/public/track/click/snapshot-chat-perfect?to=%2Fportal%2Fsnapshot-chat-perfect" style="display:inline-block;padding:12px 22px;background:#4f46e5;color:#ffffff;text-decoration:none;border-radius:10px;font:700 14px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;">Open in QualiPulse</a>
        </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;">
          <div style="font:14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Regards,</div>
          <div style="margin-top:2px;font:700 14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">QualiPulse Team</div>
          <div style="margin-top:2px;font:13px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        This is an automated message from QualiPulse. Please do not reply directly.
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-chat-perfect" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > chat-perfect — plain-text output is stable 1`] = `
"QualiPulse
Quality Feedback – Snapshot — chat-perfect

Hello Aisha,

A quality evaluation has been completed for your recent Chat interaction.

Overall Quality Score: 100.0%

Quality Evaluation
  [x] Greeting and Introduction — 100.0%
  [x] Communication Clarity — 100.0%
  [x] Product or Process Knowledge — 100.0%
  [x] Issue Resolution — 100.0%
  [x] Empathy and Professionalism — 100.0%
  [x] Accuracy and Compliance — 100.0%
  [x] Closing and Next Steps — 100.0%

Strengths
Excellent on every parameter.

Open in QualiPulse: https://example.test/portal/snapshot-chat-perfect

Regards,
QualiPulse Team
Quality Feedback and Performance Management"
`;

exports[`feedback email template snapshots > chat-perfect — subject line is stable 1`] = `"Quality Feedback – Snapshot — chat-perfect"`;

exports[`feedback email template snapshots > chat-zero — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light" />
  <title>Quality Feedback – Snapshot — chat-zero</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback – Snapshot — chat-zero · Overall 0.0%</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:22px 24px 8px;border-bottom:1px solid #e5e7eb;">
          <div style="font:800 22px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:.04em;">QualiPulse</div>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 4px;">
          <div style="font:600 16px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Hello Aisha,</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">
            A quality evaluation has been completed for your recent Chat interaction.
          </div>
        </td></tr>

        <tr><td class="px" style="padding:16px 24px 4px;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
            <tr><td align="center" style="padding:18px 16px;">
              <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
              <div style="margin-top:8px;font:800 34px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;">0.0%</div>
            </td></tr>
          </table>
        </td></tr>

        
      <tr><td style="padding:8px 24px 4px;">
        <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Quality Evaluation</div>
        <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Greeting and Introduction
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Communication Clarity
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Product or Process Knowledge
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Issue Resolution
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Empathy and Professionalism
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Accuracy and Compliance
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr>
        <tr>
          <td style="padding:9px 0;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            <span style="display:inline-block;width:16px;color:#059669;font-weight:700;">&#10003;</span>
            Closing and Next Steps
          </td>
          <td align="right" style="padding:9px 0;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;white-space:nowrap;">0.0%</td>
        </tr></table>
      </td></tr>

        
    <tr><td style="padding:8px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Summary</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Full miss across the board.</div>
    </td></tr>
        
        
        
        

        <tr><td class="px" align="center" style="padding:18px 24px 6px;">
          <a href="https://example.test/api/public/track/click/snapshot-chat-zero?to=%2Fportal%2Fsnapshot-chat-zero" style="display:inline-block;padding:12px 22px;background:#4f46e5;color:#ffffff;text-decoration:none;border-radius:10px;font:700 14px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;">Open in QualiPulse</a>
        </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;">
          <div style="font:14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Regards,</div>
          <div style="margin-top:2px;font:700 14.5px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">QualiPulse Team</div>
          <div style="margin-top:2px;font:13px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        This is an automated message from QualiPulse. Please do not reply directly.
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-chat-zero" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > chat-zero — plain-text output is stable 1`] = `
"QualiPulse
Quality Feedback – Snapshot — chat-zero

Hello Aisha,

A quality evaluation has been completed for your recent Chat interaction.

Overall Quality Score: 0.0%

Quality Evaluation
  [x] Greeting and Introduction — 0.0%
  [x] Communication Clarity — 0.0%
  [x] Product or Process Knowledge — 0.0%
  [x] Issue Resolution — 0.0%
  [x] Empathy and Professionalism — 0.0%
  [x] Accuracy and Compliance — 0.0%
  [x] Closing and Next Steps — 0.0%

Summary
Full miss across the board.

Open in QualiPulse: https://example.test/portal/snapshot-chat-zero

Regards,
QualiPulse Team
Quality Feedback and Performance Management"
`;

exports[`feedback email template snapshots > chat-zero — subject line is stable 1`] = `"Quality Feedback – Snapshot — chat-zero"`;
